# TextTuner

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  run.py  setup.py
examples/: example_usage.py
src/: __init__.py  main.py
src/ config/: style_configs.py
src/config/: __init__.py  settings.py  style_configs.py
src/core/: __init__.py  statistics_calculator.py  style_adapter.py  text_analyzer.py
src/models/: __init__.py  style_models.py  text_models.py
src/utils/: __init__.py  dictionary_loader.py  file_handler.py  text_preprocessor.py
