[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TextTuner"
version = "1.0.0"
description = "Инструмент адаптации текста под целевой стиль с лингвистическим анализом"
readme = "README.md"
authors = [
    {name = "Azimkova Anna", email = "adazimkova@edu.hse.ru"},
]
license = {text = "MIT"}
keywords = ["linguistics", "text-analysis", "style-adaptation", "nlp", "russian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.8"
dependencies = [
    "pymorphy3>=2.0.6",
    "pymorphy3-dicts-ru>=0.99.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "chardet>=5.0.0",
    "typing-extensions>=4.5.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/puglyann/TextTuner"
Repository = "https://github.com/puglyann/TextTuner"
"Issue Tracker" = "https://github.com/puglyann/TextTuner/issues"

[project.scripts]
text-tuner = "src.main:main"

[project.entry-points."text_tuner.plugins"]
example = "text_tuner.plugins.example:register"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["tests", "tests.*", "*.tests", "*.tests.*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md", "py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_sort_within_sections = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # mccabe complexity
    "B",  # bugbear
    "I",  # isort
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    ".env",
    "build",
    "dist",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py: F401",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "numpy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--durations=10",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:coverage_html",
    "--cov-report=xml:coverage.xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
    "unit: unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
    "*/conftest.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
fail_under = 80

[tool.bandit]
exclude_dirs = ["tests", "docs", "examples"]
skips = ["B101", "B104"]

[tool.taskipy.tasks]
test = "pytest"
test-cov = "pytest --cov=src --cov-report=html"
lint = "flake8 src"
format = "black src"
format-check = "black --check src"
type = "mypy src"
sort = "isort src"
all = "task lint && task format-check && task type"
dev = "uvicorn src.api:app --reload"
install = "pip install -e .[dev,test]"

[tool.text-tuner]
default_language = "russian"
supported_languages = ["russian"]
max_file_size_mb = 10
default_encoding = "utf-8"
log_level = "INFO"
enable_visualization = true
save_reports = true

[tool.text-tuner.styles]
научный = { lexical_diversity = 0.7, formality = 0.8, readability = 40.0 }
художественный = { lexical_diversity = 0.8, formality = 0.3, readability = 70.0 }
официально-деловой = { lexical_diversity = 0.6, formality = 0.9, readability = 30.0 }
разговорный = { lexical_diversity = 0.5, formality = 0.2, readability = 80.0 }

[tool.text-tuner.paths]
data = "data"
examples = "examples"
reports = "reports"
logs = "logs"
dictionaries = "data/dictionaries"

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}