[project]
name = "text-tuner"
version = "0.1.0"
description = "Инструмент адаптации текста под целевой стиль с лингвистическим анализом"
authors = [
    {name = "puglyann", email = "annaazimkova@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "pymorphy3>=2.0.6",
    "pymorphy3-dicts-ru>=0.99.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pillow>=10.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ipython>=8.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
